# tafsiri-mcp

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml
docs/architecture/: IP_POLICY.md
src/tafsiri_mcp/: __init__.py  server.py
tests/: test_smoke.py
