[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tafsiri-mcp"
version = "0.1.3"
description = "Kenya translation infrastructure via MCP — Swahili/English glossary, Kikuyu guide, Luo guide, offici"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
tafsiri-mcp = "tafsiri_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
# build: 1782218505
